# SKN21-3rd-1TEAM

./: .gitignore  QDRANT_GUIDE.md  README.md  docker-compose.yml  extract_metrics.py  extract_metrics_v2.py  main.py  probe_langchain.py  pyproject.toml
A-TEAM/: crawler.py  debug_selector.py
A-TEAM/scripts/: baseline.py  baseline_local.py  crawler.py  crawler_judgment.py  crawler_판례.py  moel_crawler.py  vectorize_to_qdrant.py
B-TEAM/: crawling.py  splite.ipynb  vector_store.ipynb
C-TEAM/: stores.py  vectorization.ipynb
C-TEAM/data/: 5ㆍ18민주화운동 등에 관한 특별법.txt  가정폭력범죄의 처벌 등에 관한 특례법 시행령.txt  검사와 사법경찰관의 상호협력과 일반적 수사준칙에 관한 규정.txt  경범죄 처벌법 시행규칙.txt  경찰수사규칙.txt  공소보류자관찰규칙.txt  과태료 체납자에 대한 감치의 재판에 관한 규칙.txt  국가보안법.txt  국가보안유공자상금지급등에관한규정제8조단서의규정에의한무기지정규칙.txt  국내재산 도피 방지법 시행령.txt  국민사법참여위원회 규칙.txt  국민의 형사재판 참여에 관한 규칙.txt  국제수형자이송법.txt  국제형사사법공조규칙.txt  국제형사재판소 관할 범죄의 처벌 등에 관한 법률.txt  군사경찰의 직무수행에 관한 법률 시행령.txt  내란ㆍ외환ㆍ반란 범죄 등의 형사절차에 관한 특례법.txt  디엔에이신원확인정보의 이용 및 보호에 관한 법률 시행령.txt  마약류 불법거래 방지에 관한 특례법 시행령.txt  민영교도소 등의 설치ㆍ운영에 관한 법률 시행령.txt  민영교도소 등의 설치ㆍ운영에 관한 법률.txt  벌금 등 임시조치법.txt  범죄인 인도법.txt  범죄인인도법에의한인도심사등의절차에관한규칙.txt  보안관찰법.txt  보호관찰 등에 관한 법률 시행규칙.txt  보호소년 등의 처우에 관한 법률 시행규칙.txt  비영리법인의 임원 처벌에 관한 법률.txt  사법참여기획단 규칙.txt  성폭력범죄의 처벌 등에 관한 특례법.txt  성폭력범죄자의 성충동 약물치료에 관한 법률 시행령.txt  소년법.txt  아동보호심판규칙.txt  (+31 more)
a_team/: .gitignore  README.md
b_team/: README.md  crawling.py  splite.ipynb  vector_store.ipynb
c_team/: README.md  chaining.ipynb  chaining.py  crawling.ipynb  performance_verification.ipynb  show.ipynb  split_data.ipynb  stores.py  vectorization.ipynb  verification_datas.py
(+236 files in other folders)
